k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-manager-ingress
  namespace: task-manager
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: task-manager.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: task-manager-client
                port:
                  number: 80
